--- a/apps/mobile/lib/l10n/app_en.arb
+++ b/apps/mobile/lib/l10n/app_en.arb
@@ -5,20 +5,20 @@
   "homeScreenSubtitle": "Mob Pizza",
   "homeScreenDescription": "Cinematic pies. Speakeasy service. Whisper your order.",
   "orderNow": "Order Now",
-  "trackJobs": "Track Jobs",
+  "trackOrders": "Track Orders",
   "familyShortcuts": "Family Shortcuts",
   "theHitList": "The Hit List",
   "theHitListDesc": "Browse signature pies",
-  "jobSummary": "Job Summary",
-  "jobSummaryDesc": "Your cart, Mob-styled",
-  "pastJobs": "Past Jobs",
-  "pastJobsDesc": "Track & re-order",
+  "orderSummaryCard": "Order Summary",
+  "orderSummaryCardDesc": "Your cart, Mob-styled",
+  "pastOrders": "Past Orders",
+  "pastOrdersDesc": "Track & re-order",
   "yourFile": "Your File",
   "yourFileDesc": "Profile & safehouses",
   "languageToggle": "Convert to Spanish?",
   "languageToggleDesc": "Toggle app language",
   "languageToggleSpanish": "Convertir a Inglés?",
-  "jobsClosed": "Jobs Closed",
+  "ordersClosed": "Orders Closed",
   "familyPoints": "Family Points",
   "safehouses": "Safehouses",
   "familyBulletin": "Family Bulletin",
@@ -104,5 +104,5 @@
   "address": "Address",
   "specialInstructions": "Special Instructions",
   "dropLocation": "Drop Location",
-  "lockInTheJob": "Lock In the Job"
+  "lockInTheOrder": "Lock In the Order"
 }
