--- a/apps/mobile/lib/l10n/app_es.arb
+++ b/apps/mobile/lib/l10n/app_es.arb
@@ -5,20 +5,20 @@
   "homeScreenSubtitle": "Mob Pizza",
   "homeScreenDescription": "Pizzas cinematográficas. Servicio clandestino. Susurra tu pedido.",
   "orderNow": "Ordenar Ahora",
-  "trackJobs": "Rastrear Trabajos",
+  "trackOrders": "Rastrear Pedidos",
   "familyShortcuts": "Atajos Familiares",
   "theHitList": "La Lista de Golpes",
   "theHitListDesc": "Navega pizzas de firma",
-  "jobSummary": "Resumen del Trabajo",
-  "jobSummaryDesc": "Tu carrito, estilo Mafia",
-  "pastJobs": "Trabajos Pasados",
-  "pastJobsDesc": "Rastrea y reordena",
+  "orderSummaryCard": "Resumen del Pedido",
+  "orderSummaryCardDesc": "Tu carrito, estilo Mafia",
+  "pastOrders": "Pedidos Pasados",
+  "pastOrdersDesc": "Rastrea y reordena",
   "yourFile": "Tu Archivo",
   "yourFileDesc": "Perfil y casas seguras",
   "languageToggle": "Convertir a Español?",
   "languageToggleDesc": "Cambiar idioma de la app",
   "languageToggleSpanish": "Convertir a Inglés?",
-  "jobsClosed": "Trabajos Cerrados",
+  "ordersClosed": "Pedidos Cerrados",
   "familyPoints": "Puntos Familiares",
   "safehouses": "Casas Seguras",
   "familyBulletin": "Boletín Familiar",
@@ -104,5 +104,5 @@
   "address": "Dirección",
   "specialInstructions": "Instrucciones especiales",
   "dropLocation": "Ubicación de entrega",
-  "lockInTheJob": "Confirmar el trabajo"
+  "lockInTheOrder": "Confirmar el pedido"
 }
