added en<-> spanish translation robustlyy

--- a/apps/mobile/lib/l10n/app_es.arb
+++ b/apps/mobile/lib/l10n/app_es.arb
@@ -104,5 +104,162 @@
   "address": "Dirección",
   "specialInstructions": "Instrucciones especiales",
   "dropLocation": "Ubicación de entrega",
-  "lockInTheOrder": "Confirmar el pedido"
+  "lockInTheOrder": "Confirmar el pedido",
+  "joinTheFamily": "Únete a la Familia",
+  "language": "Idioma",
+  "english": "Inglés",
+  "spanish": "Español",
+  "allowLocation": "Permitir ubicación",
+  "allowNotifications": "Permitir notificaciones",
+  "locationHelps": "Ayuda a confirmar el área de entrega",
+  "notificationsHelps": "Actualizaciones de pedidos y ofertas",
+  "requestPermissions": "Solicitar permisos",
+  "continueButton": "Continuar",
+  "phoneRequired": "El teléfono es obligatorio",
+  "enterValidPhone": "Ingresa un teléfono válido",
+  "onboardingSuccess": "Registro guardado",
+  "onboardingSuccessOffline": "Registro guardado (sin conexión)",
+  "networkIssue": "Problema de red",
+  "networkIssueMessage": "No se pudo conectar al servidor. ¿Continuar sin conexión? (Los datos se guardarán localmente y se sincronizarán cuando haya conexión.)",
+  "continueOffline": "Continuar sin conexión",
+  "name": "Nombre",
+  "firstName": "Nombre",
+  "lastName": "Apellido",
+  "streetAddress": "Dirección de la calle",
+  "contact": "Contacto",
+  "phone": "Teléfono",
+  "required": "Obligatorio",
+  "profileUpdated": "Perfil actualizado con éxito",
+  "profileUpdateFailed": "Error al actualizar el perfil",
+  "loggedOut": "Sesión cerrada",
+  "noPizzasFound": "No se encontraron pizzas",
+  "tryDifferentKeywords": "Intenta buscar con palabras clave diferentes",
+  "heatLevel": "Nivel de picante:",
+  "veg": "VEG",
+  "nonVeg": "NO VEG",
+  "yourCartIsEmpty": "Tu carrito está vacío",
+  "addPizzasToGetStarted": "Agrega algunas pizzas deliciosas para comenzar",
+  "browseMenu": "VER MENÚ",
+  "size": "Tamaño:",
+  "toppings": "Ingredientes:",
+  "remove": "Eliminar",
+  "item": "artículo",
+  "items": "artículos",
+  "addMore": "AGREGAR MÁS",
+  "proceedToDeal": "PROCEDER AL PEDIDO",
+  "orderHistoryWillAppear": "Tu historial de pedidos aparecerá aquí",
+  "orderNotFound": "PEDIDO NO ENCONTRADO",
+  "orderNotFoundMessage": "Pedido no encontrado",
+  "orderItems": "ARTÍCULOS DEL PEDIDO",
+  "orderInformation": "INFORMACIÓN DEL PEDIDO",
+  "orderNumber": "Número de pedido",
+  "customer": "Cliente",
+  "deliveryAddress": "Dirección de entrega",
+  "orderDate": "Fecha del pedido",
+  "estimatedDelivery": "Entrega estimada",
+  "stripeOnlinePayment": "Pago en línea con Stripe",
+  "addedToCart": "Agregado al carrito",
+  "cartItems": "Artículos en el carrito",
+  "viewCart": "VER CARRITO",
+  "aboutThisPizza": "ACERCA DE ESTA PIZZA",
+  "ingredients": "INGREDIENTES",
+  "specialToppings": "INGREDIENTES ESPECIALES",
+  "sizeOptions": "OPCIONES DE TAMAÑO",
+  "addToCartButton": "AGREGAR AL CARRITO",
+  "houseNotes": "Notas de la casa:",
+  "addTruffleDrizzle": "Agrega un chorrito de trufa por un pequeño costo adicional.",
+  "bossPicks": "Elecciones del Jefe",
+  "underTheTableDeals": "Tratos Bajo la Mesa",
+  "familyCombos": "Combos Familiares",
+  "cinematicPiesSpeakeasy": "Pizzas cinematográficas, servicio clandestino.",
+  "checkout": "PAGAR",
+  "orderSummary": "RESUMEN DEL PEDIDO",
+  "pleaseEnterName": "Por favor ingresa tu nombre",
+  "pleaseEnterPhone": "Por favor ingresa tu número de teléfono",
+  "deliveryAddressRequired": "La dirección de entrega es obligatoria",
+  "enterCompleteAddress": "Por favor ingresa una dirección completa",
+  "enterCompleteDeliveryAddress": "Ingresa tu dirección de entrega completa",
+  "orderPlacedSuccessfully": "¡Pedido realizado con éxito!",
+  "orderNumber": "Pedido #",
+  "errorPlacingOrder": "Error al realizar el pedido:",
+  "internationalVariations": "Variaciones Internacionales",
+  "specialityAndAlternativeBases": "Especialidades y Bases Alternativas",
+  "americanRegionalStyle": "Estilo Regional Americano",
+  "italianStyle": "Estilo Italiano",
+  "classicAndWidelySoldPizzas": "Pizzas Clásicas y Más Vendidas",
+  "solo": "Solo",
+  "crew": "Equipo",
+  "family": "Familia",
+  "pizzaJapaneseInspired": "Inspirada en Japón",
+  "pizzaJapaneseInspiredDesc": "Mariscos, mayonesa, elementos teriyaki.",
+  "pizzaJapaneseInspiredFullDesc": "Una obra maestra de fusión que combina sabores japoneses con técnica italiana. Atún fresco de calidad sushi, mayonesa cremosa y glaseado teriyaki crean una armonía inesperada. Las algas nori y las semillas de sésamo añaden textura y profundidad umami que transportará tus papilas gustativas a nuevos territorios.",
+  "pizzaIndianInspired": "Inspirada en India",
+  "pizzaIndianInspiredDesc": "Paneer, ingredientes tandoori, salsas especiadas.",
+  "pizzaIndianInspiredFullDesc": "Experimenta los sabores vibrantes de la India reimaginados en una corteza crujiente. Paneer marinado al tandoori, cebollas encurtidas y chutney de cilantro crean una sinfonía de especias y frescura. Esta pizza une dos mundos culinarios con una armonía notable y carácter audaz.",
+  "pizzaTurkishPide": "Pide Turco",
+  "pizzaTurkishPideDesc": "Pan plano en forma de barco con ingredientes.",
+  "pizzaTurkishPideFullDesc": "Pide turco auténtico con una corteza en forma de barco rellena de cordero molido sazonado, cebollas y pimientos. La masa se estira fina y se dobla para crear el recipiente perfecto para estos rellenos aromáticos. Un sabor de las bulliciosas calles de Estambul en cada bocado.",
+  "pizzaBrazilian": "Brasileña",
+  "pizzaBrazilianDesc": "Opciones dulces/postre junto con saladas.",
+  "pizzaBrazilianFullDesc": "Una celebración de sabores brasileños con palmitos tropicales, maíz y copos de coco. La combinación única de elementos dulces y salados refleja la herencia culinaria diversa de Brasil. Ligera, refrescante y completamente única.",
+  "pizzaGlutenFree": "Pizza Sin Gluten",
+  "pizzaGlutenFreeDesc": "Harinas alternativas, elaboradas para una base más ligera.",
+  "pizzaGlutenFreeFullDesc": "Nuestra corteza sin gluten utiliza una mezcla especial de harinas de arroz y tapioca para esa textura perfecta. Cubierta con vegetales frescos y nuestra salsa especial, esta pizza demuestra que las restricciones dietéticas no significan comprometer el sabor.",
+  "pizzaVegan": "Pizza Vegana",
+  "pizzaVeganDesc": "Queso y ingredientes a base de plantas; sin productos animales.",
+  "pizzaVeganFullDesc": "Una creación compasiva con queso a base de plantas, vegetales frescos y salsa de tomate vegana hecha en casa. Cada ingrediente se selecciona cuidadosamente para asegurar que tanto el sabor como la ética estén satisfechos. Comida deliciosa que hace el bien.",
+  "pizzaStuffedCrust": "Corteza Rellena",
+  "pizzaStuffedCrustDesc": "Borde de corteza relleno de queso para los indulgentes.",
+  "pizzaStuffedCrustFullDesc": "El máximo placer con una corteza rellena de queso mozzarella pegajoso. Cada bocado incluye ese estiramiento extra de queso derretido. Cubierta con pepperoni y nuestra salsa especial, esta es la respuesta de la pizza a un abrazo cálido.",
+  "pizzaWhite": "Pizza Blanca",
+  "pizzaWhiteDesc": "Ricotta, mozzarella, aceite de oliva, ajo—sin salsa de tomate.",
+  "pizzaWhiteFullDesc": "Una salida sofisticada de la multitud de salsa roja. La ricotta cremosa y la mozzarella se mezclan con ajo asado y hierbas frescas en una corteza perfectamente horneada. La ausencia de salsa de tomate permite que los sabores puros y lácteos brillen.",
+  "pizzaNewYorkStyle": "Estilo Nueva York",
+  "pizzaNewYorkStyleDesc": "Rebanadas grandes y doblables; corteza delgada pero resistente.",
+  "pizzaNewYorkStyleFullDesc": "La rebanada neoyorquina por excelencia que hizo famosa la pizza en todo el mundo. Corteza delgada y doblable con la cantidad justa de carbonización. Pepperoni premium y nuestra salsa de tomate casera crean esa proporción perfecta de corteza a ingredientes que define la perfección de la pizza de NYC.",
+  "pizzaChicagoDeepDish": "Chicago Deep Dish",
+  "pizzaChicagoDeepDishDesc": "Corteza gruesa tipo pastel con queso y salsa en capas.",
+  "pizzaChicagoDeepDishFullDesc": "El rey de las pizzas deep dish, construida en una sartén de hierro fundido para esa corteza mantecosa perfecta. Queso en capas y salsa de tomate gruesa crean un pastel abundante y satisfactorio que es más cazuela que pizza. Una institución de Chicago que vale cada caloría.",
+  "pizzaDetroitStyle": "Estilo Detroit",
+  "pizzaDetroitStyleDesc": "Molde rectangular, bordes de queso caramelizados.",
+  "pizzaDetroitStyleFullDesc": "La respuesta de Detroit al deep dish, con un molde rectangular que crea esos legendarios bordes de queso caramelizado. El fondo crujiente y el perímetro quesoso hacen que este estilo sea únicamente adictivo. Queso brick y pepperoni crean la experiencia perfecta de Motor City.",
+  "pizzaCaliforniaStyle": "Estilo California",
+  "pizzaCaliforniaStyleDesc": "Corteza delgada con ingredientes frescos no convencionales.",
+  "pizzaCaliforniaStyleFullDesc": "Sueños californianos en una corteza con queso de cabra, nueces e higos frescos. Este estilo innovador rompió todas las reglas cuando debutó, demostrando que la pizza podía ser tanto gourmet como accesible. Una celebración de ingredientes frescos y de temporada.",
+  "pizzaNeapolitan": "Napolitana",
+  "pizzaNeapolitanDesc": "Delgada, suave, horneada en leña con bordes ampollados.",
+  "pizzaNeapolitanFullDesc": "Pizza napolitana auténtica tal como debe comerse. La masa de alta hidratación crea esas manchas de leopardo perfectas cuando se cocina a 900°F en nuestro horno de leña. Ingredientes frescos y simples que capturan la esencia de Nápoles en cada bocado tierno.",
+  "pizzaRomanAlTaglio": "Romana al Taglio",
+  "pizzaRomanAlTaglioDesc": "Rectangular, delgada, crujiente; vendida por rebanada.",
+  "pizzaRomanAlTaglioFullDesc": "Pizza estilo romano que se trata de compartir. Corteza delgada y crujiente cubierta con ingredientes de temporada y cortada en rectángulos. El lienzo perfecto para ingredientes creativos y comida comunal. Cada rebanada cuenta su propia historia de la tradición culinaria romana.",
+  "pizzaSicilian": "Siciliana (Sfinciuni)",
+  "pizzaSicilianDesc": "Corteza gruesa y aireada; salsa con cebolla prominente.",
+  "pizzaSicilianFullDesc": "Corteza gruesa tipo focaccia cubierta con cebollas dulces, anchoas y hierbas. Este clásico siciliano presenta una base tipo pan que es perfecta para absorber la salsa de tomate sabrosa. Una experiencia abundante y sabrosa que es únicamente siciliana.",
+  "pizzaMargherita": "Margherita – La Amante",
+  "pizzaMargheritaDesc": "Corteza delgada confiada por el Don.",
+  "pizzaMargheritaFullDesc": "Una obra maestra de simplicidad, esta Margherita clásica combina los tomates San Marzano más frescos, mozzarella di bufala cremosa y hojas de albahaca fragantes. Cada bocado cuenta una historia de tradición italiana, donde el equilibrio perfecto de sabores crea una experiencia inolvidable que ha resistido la prueba del tiempo.",
+  "pizzaPepperoniClassic": "Pepperoni Clásico",
+  "pizzaPepperoniClassicDesc": "Salsa de tomate, mozzarella, rebanadas de pepperoni.",
+  "pizzaPepperoniClassicFullDesc": "La pizza que lo comenzó todo. Simple, perfecta y completamente satisfactoria. Nuestra salsa de tomate casera, mozzarella premium y rebanadas de pepperoni clásico se unen en perfecta armonía. A veces los clásicos son clásicos por una razón.",
+  "pizzaCheeseClassic": "Queso Clásico",
+  "pizzaCheeseClassicDesc": "Salsa de tomate y mozzarella; minimalista y reconfortante.",
+  "pizzaCheeseClassicFullDesc": "Perfección de pizza pura y sin adulterar. Solo nuestra salsa de tomate casera, mozzarella premium y un toque de aceite de oliva. Este enfoque minimalista permite que la calidad de nuestros ingredientes brille. Ingredientes simples, simplemente extraordinarios.",
+  "pizzaVeggieClassic": "Vegetariana Clásica",
+  "pizzaVeggieClassicDesc": "Pimientos, cebollas, aceitunas, champiñones.",
+  "pizzaVeggieClassicFullDesc": "Una celebración fresca del jardín de vegetales bien hechos. Pimientos morrones crujientes, cebollas dulces, aceitunas saladas y champiñones terrosos crean una sinfonía de texturas y sabores. Nuestra obra maestra vegetariana demuestra que la carne no es necesaria para una pizza extraordinaria.",
+  "pizzaCapreseHitman": "Caprese Hitman",
+  "pizzaCapreseHitmanDesc": "Mozzarella fresca, albahaca, chorrito de aceite mafia.",
+  "pizzaCapreseHitmanFullDesc": "Una obra maestra inspirada en Sicilia que presenta la combinación clásica Caprese elevada a la perfección. Tomates heirloom jugosos, mozzarella fresca cremosa y albahaca fragante se unen con nuestra reducción de aceite de oliva especial. Cada rebanada captura la esencia del sol mediterráneo.",
+  "pizzaTruffleWhiteHit": "Trufa Blanca Hit",
+  "pizzaTruffleWhiteHitDesc": "Salsa blanca, lluvia de parmesano.",
+  "pizzaTruffleWhiteHitFullDesc": "Déjate consentir con nuestra pizza blanca infusionada con trufa. La ricotta cremosa y el parmesano crean un lienzo aterciopelado para trufas negras terrosas y hierbas frescas. Esta creación sofisticada eleva la simple pizza blanca a una experiencia gourmet digna de las mejores trattorias italianas.",
+  "pizzaBrickOvenDon": "Don Horno de Ladrillo",
+  "pizzaBrickOvenDonDesc": "Corteza besada por el fuego, aceite de albahaca.",
+  "pizzaBrickOvenDonFullDesc": "Experimenta el sabor auténtico de Nápoles con nuestra pizza horneada en leña en un horno de ladrillo tradicional. La cocción a alta temperatura crea esas manchas de leopardo perfectas en la corteza mientras preserva el equilibrio delicado de ingredientes frescos y aceite de oliva infusionado con albahaca aromática.",
+  "pizzaSmokyCapoBBQ": "Capo BBQ Ahumado",
+  "pizzaSmokyCapoBBQDesc": "Horno de ladrillo, calor dulce.",
+  "pizzaSmokyCapoBBQFullDesc": "Nuestra pizza BBQ especial une la profundidad ahumada de la pechuga cocida lentamente con salsa BBQ casera ácida y cebollas caramelizadas. El matrimonio perfecto de comodidad sureña y tradición italiana crea un perfil de sabor que es igualmente reconfortante y adictivo.",
+  "pizzaVelvetPepperoni": "Pepperoni Aterciopelado",
+  "pizzaVelvetPepperoniDesc": "Rizos cargados, estiramiento de queso aterciopelado.",
+  "pizzaVelvetPepperoniFullDesc": "Nuestra versión de la pizza clásica de pepperoni presenta tazas de pepperoni premium que se enrollan perfectamente durante la cocción, creando bordes crujientes y centros jugosos. Combinado con nuestra salsa de tomate casera y mozzarella elástica, esta es comida reconfortante en su máxima expresión."
 }
