--- a/apps/mobile/lib/l10n/app_en.arb
+++ b/apps/mobile/lib/l10n/app_en.arb
@@ -104,5 +104,162 @@
   "address": "Address",
   "specialInstructions": "Special Instructions",
   "dropLocation": "Drop Location",
-  "lockInTheOrder": "Lock In the Order"
+  "lockInTheOrder": "Lock In the Order",
+  "joinTheFamily": "Join the Family",
+  "language": "Language",
+  "english": "English",
+  "spanish": "Spanish",
+  "allowLocation": "Allow Location",
+  "allowNotifications": "Allow Notifications",
+  "locationHelps": "Helps confirm delivery area",
+  "notificationsHelps": "Order updates & offers",
+  "requestPermissions": "Request Permissions",
+  "continueButton": "Continue",
+  "phoneRequired": "Phone is required",
+  "enterValidPhone": "Enter valid phone",
+  "onboardingSuccess": "Onboarding saved",
+  "onboardingSuccessOffline": "Onboarding saved (offline)",
+  "networkIssue": "Network issue",
+  "networkIssueMessage": "Could not reach the server. Continue offline? (Data will be stored locally and will sync when online.)",
+  "continueOffline": "Continue offline",
+  "name": "Name",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "streetAddress": "Street Address",
+  "contact": "Contact",
+  "phone": "Phone",
+  "required": "Required",
+  "profileUpdated": "Profile updated successfully",
+  "profileUpdateFailed": "Failed to update profile",
+  "loggedOut": "Logged out",
+  "noPizzasFound": "No pizzas found",
+  "tryDifferentKeywords": "Try searching with different keywords",
+  "heatLevel": "Heat Level:",
+  "veg": "VEG",
+  "nonVeg": "NON-VEG",
+  "yourCartIsEmpty": "Your cart is empty",
+  "addPizzasToGetStarted": "Add some delicious pizzas to get started",
+  "browseMenu": "BROWSE MENU",
+  "size": "Size:",
+  "toppings": "Toppings:",
+  "remove": "Remove",
+  "item": "item",
+  "items": "items",
+  "addMore": "ADD MORE",
+  "proceedToDeal": "PROCEED TO DEAL",
+  "orderHistoryWillAppear": "Your order history will appear here",
+  "orderNotFound": "ORDER NOT FOUND",
+  "orderNotFoundMessage": "Order not found",
+  "orderItems": "ORDER ITEMS",
+  "orderInformation": "ORDER INFORMATION",
+  "orderNumber": "Order Number",
+  "customer": "Customer",
+  "deliveryAddress": "Delivery Address",
+  "orderDate": "Order Date",
+  "estimatedDelivery": "Estimated Delivery",
+  "stripeOnlinePayment": "Stripe Online Payment",
+  "addedToCart": "Added to Cart",
+  "cartItems": "Cart items",
+  "viewCart": "VIEW CART",
+  "aboutThisPizza": "ABOUT THIS PIZZA",
+  "ingredients": "INGREDIENTS",
+  "specialToppings": "SPECIAL TOPPINGS",
+  "sizeOptions": "SIZE OPTIONS",
+  "addToCartButton": "ADD TO CART",
+  "houseNotes": "House Notes:",
+  "addTruffleDrizzle": "Add truffle drizzle for a small upcharge.",
+  "bossPicks": "Boss Picks",
+  "underTheTableDeals": "Under-the-Table Deals",
+  "familyCombos": "Family Combos",
+  "cinematicPiesSpeakeasy": "Cinematic pies, speakeasy service.",
+  "checkout": "CHECKOUT",
+  "orderSummary": "ORDER SUMMARY",
+  "pleaseEnterName": "Please enter your name",
+  "pleaseEnterPhone": "Please enter your phone number",
+  "deliveryAddressRequired": "Delivery address is required",
+  "enterCompleteAddress": "Please enter a complete address",
+  "enterCompleteDeliveryAddress": "Enter your complete delivery address",
+  "orderPlacedSuccessfully": "Order Placed Successfully!",
+  "orderNumber": "Order #",
+  "errorPlacingOrder": "Error placing order:",
+  "internationalVariations": "International Variations",
+  "specialityAndAlternativeBases": "Speciality and Alternative Bases",
+  "americanRegionalStyle": "American Regional Style",
+  "italianStyle": "Italian Style",
+  "classicAndWidelySoldPizzas": "Classic and Widely Sold Pizzas",
+  "solo": "Solo",
+  "crew": "Crew",
+  "family": "Family",
+  "pizzaJapaneseInspired": "Japanese-Inspired",
+  "pizzaJapaneseInspiredDesc": "Seafood, mayo, teriyaki elements.",
+  "pizzaJapaneseInspiredFullDesc": "A fusion masterpiece blending Japanese flavors with Italian technique. Fresh sushi-grade tuna, creamy mayo, and teriyaki glaze create an unexpected harmony. The nori and sesame seeds add texture and umami depth that will transport your taste buds to new territories.",
+  "pizzaIndianInspired": "Indian-Inspired",
+  "pizzaIndianInspiredDesc": "Paneer, tandoori toppings, spiced sauces.",
+  "pizzaIndianInspiredFullDesc": "Experience the vibrant flavors of India reimagined on a crispy crust. Tandoori-marinated paneer, pickled onions, and cilantro chutney create a symphony of spice and freshness. This pizza bridges two culinary worlds with remarkable harmony and bold character.",
+  "pizzaTurkishPide": "Turkish Pide",
+  "pizzaTurkishPideDesc": "Boat-shaped flatbread with toppings.",
+  "pizzaTurkishPideFullDesc": "Authentic Turkish pide featuring a boat-shaped crust filled with seasoned ground lamb, onions, and peppers. The dough is stretched thin and folded to create the perfect vessel for these aromatic fillings. A taste of Istanbul's bustling streets in every bite.",
+  "pizzaBrazilian": "Brazilian",
+  "pizzaBrazilianDesc": "Sweet/dessert-style options alongside savory.",
+  "pizzaBrazilianFullDesc": "A celebration of Brazilian flavors featuring tropical hearts of palm, corn, and coconut flakes. The unique combination of sweet and savory elements reflects Brazil's diverse culinary heritage. Light, refreshing, and utterly unique.",
+  "pizzaGlutenFree": "Gluten-Free Pizza",
+  "pizzaGlutenFreeDesc": "Alternative flours, crafted for a lighter base.",
+  "pizzaGlutenFreeFullDesc": "Our gluten-free crust uses a special blend of rice and tapioca flours for that perfect texture. Topped with fresh vegetables and our signature sauce, this pizza proves that dietary restrictions don't mean compromising on flavor.",
+  "pizzaVegan": "Vegan Pizza",
+  "pizzaVeganDesc": "Plant-based cheese and toppings; no animal products.",
+  "pizzaVeganFullDesc": "A compassionate creation featuring plant-based cheese, fresh vegetables, and house-made vegan tomato sauce. Every ingredient is carefully selected to ensure both flavor and ethics are satisfied. Delicious food that does good.",
+  "pizzaStuffedCrust": "Stuffed Crust",
+  "pizzaStuffedCrustDesc": "Cheese-filled crust edge for the indulgent.",
+  "pizzaStuffedCrustFullDesc": "The ultimate indulgence featuring a crust stuffed with gooey mozzarella cheese. Every bite includes that extra stretch of melted cheese. Topped with pepperoni and our signature sauce, this is pizza's answer to a warm hug.",
+  "pizzaWhite": "White Pizza",
+  "pizzaWhiteDesc": "Ricotta, mozzarella, olive oil, garlic—no tomato sauce.",
+  "pizzaWhiteFullDesc": "A sophisticated departure from the red sauce crowd. Creamy ricotta and mozzarella mingle with roasted garlic and fresh herbs on a perfectly baked crust. The absence of tomato sauce lets the pure, dairy-forward flavors shine through.",
+  "pizzaNewYorkStyle": "New York Style",
+  "pizzaNewYorkStyleDesc": "Large, foldable slices; thin but sturdy crust.",
+  "pizzaNewYorkStyleFullDesc": "The quintessential New York slice that made pizza famous worldwide. Thin, foldable crust with just the right amount of char. Premium pepperoni and our house tomato sauce create that perfect ratio of crust to topping that defines NYC pizza perfection.",
+  "pizzaChicagoDeepDish": "Chicago Deep Dish",
+  "pizzaChicagoDeepDishDesc": "Thick, pie-like crust with layered cheese and sauce.",
+  "pizzaChicagoDeepDishFullDesc": "The king of deep dish pizzas, built in a cast-iron skillet for that perfect buttery crust. Layered cheese and chunky tomato sauce create a hearty, satisfying pie that's more casserole than pizza. A Chicago institution worth every calorie.",
+  "pizzaDetroitStyle": "Detroit Style",
+  "pizzaDetroitStyleDesc": "Rectangular pan, caramelized cheese edges.",
+  "pizzaDetroitStyleFullDesc": "Detroit's answer to the deep dish, featuring a rectangular pan that creates those legendary caramelized cheese edges. The crispy bottom and cheesy perimeter make this style uniquely addictive. Brick cheese and pepperoni create the perfect Motor City experience.",
+  "pizzaCaliforniaStyle": "California Style",
+  "pizzaCaliforniaStyleDesc": "Thin crust with unconventional fresh toppings.",
+  "pizzaCaliforniaStyleFullDesc": "California dreaming on a crust featuring goat cheese, walnuts, and fresh figs. This innovative style broke all the rules when it debuted, proving that pizza could be both gourmet and approachable. A celebration of fresh, seasonal ingredients.",
+  "pizzaNeapolitan": "Neapolitan",
+  "pizzaNeapolitanDesc": "Thin, soft, wood-fired with blistered edges.",
+  "pizzaNeapolitanFullDesc": "Authentic Neapolitan pizza as it's meant to be eaten. High-hydration dough creates that perfect leopard spotting when cooked at 900°F in our wood-fired oven. Fresh, simple ingredients that capture the essence of Naples in every tender bite.",
+  "pizzaRomanAlTaglio": "Roman al Taglio",
+  "pizzaRomanAlTaglioDesc": "Rectangular, thin, crisp; sold by the slice.",
+  "pizzaRomanAlTaglioFullDesc": "Roman-style pizza that's all about sharing. Thin, crisp crust topped with seasonal ingredients and cut into rectangles. The perfect canvas for creative toppings and communal dining. Each slice tells its own story of Roman culinary tradition.",
+  "pizzaSicilian": "Sicilian (Sfinciuni)",
+  "pizzaSicilianDesc": "Thick, airy crust; onion-forward sauce.",
+  "pizzaSicilianFullDesc": "Thick, focaccia-like crust topped with sweet onions, anchovies, and herbs. This Sicilian classic features a bread-like base that's perfect for soaking up the savory tomato sauce. A hearty, flavorful experience that's uniquely Sicilian.",
+  "pizzaMargherita": "Margherita – The Mistress",
+  "pizzaMargheritaDesc": "Thin crust trusted by the Don.",
+  "pizzaMargheritaFullDesc": "A masterpiece of simplicity, this classic Margherita combines the freshest San Marzano tomatoes, creamy mozzarella di bufala, and fragrant basil leaves. Each bite tells a story of Italian tradition, where the perfect balance of flavors creates an unforgettable experience that has stood the test of time.",
+  "pizzaPepperoniClassic": "Pepperoni Classic",
+  "pizzaPepperoniClassicDesc": "Tomato sauce, mozzarella, pepperoni slices.",
+  "pizzaPepperoniClassicFullDesc": "The pizza that started it all. Simple, perfect, and utterly satisfying. Our house tomato sauce, premium mozzarella, and classic pepperoni slices come together in perfect harmony. Sometimes the classics are classics for a reason.",
+  "pizzaCheeseClassic": "Cheese Classic",
+  "pizzaCheeseClassicDesc": "Tomato sauce and mozzarella; minimalist and comforting.",
+  "pizzaCheeseClassicFullDesc": "Pure, unadulterated pizza perfection. Just our house tomato sauce, premium mozzarella, and a kiss of olive oil. This minimalist approach lets the quality of our ingredients shine through. Simple ingredients, simply extraordinary.",
+  "pizzaVeggieClassic": "Veggie Classic",
+  "pizzaVeggieClassicDesc": "Peppers, onions, olives, mushrooms.",
+  "pizzaVeggieClassicFullDesc": "A garden-fresh celebration of vegetables done right. Crisp bell peppers, sweet onions, briny olives, and earthy mushrooms create a symphony of textures and flavors. Our vegetarian masterpiece proves that meat isn't necessary for extraordinary pizza.",
+  "pizzaCapreseHitman": "Caprese Hitman",
+  "pizzaCapreseHitmanDesc": "Fresh mozz, basil, olive mafia drizzle.",
+  "pizzaCapreseHitmanFullDesc": "A Sicilian-inspired masterpiece featuring the classic Caprese combination elevated to perfection. Juicy heirloom tomatoes, creamy fresh mozzarella, and fragrant basil come together with our signature olive oil reduction. Each slice captures the essence of Mediterranean sunshine.",
+  "pizzaTruffleWhiteHit": "Truffle White Hit",
+  "pizzaTruffleWhiteHitDesc": "White sauce, parmesan rain.",
+  "pizzaTruffleWhiteHitFullDesc": "Indulge in luxury with our truffle-infused white pizza. Creamy ricotta and parmesan create a velvety canvas for earthy black truffles and fresh herbs. This sophisticated creation elevates the simple white pizza to a gourmet experience worthy of the finest Italian trattorias.",
+  "pizzaBrickOvenDon": "Brick Oven Don",
+  "pizzaBrickOvenDonDesc": "Fire-kissed crust, basil oil.",
+  "pizzaBrickOvenDonFullDesc": "Experience the authentic taste of Naples with our wood-fired pizza baked in a traditional brick oven. The high-heat cooking creates that perfect leopard spotting on the crust while preserving the delicate balance of fresh ingredients and aromatic basil-infused olive oil.",
+  "pizzaSmokyCapoBBQ": "Smoky Capo BBQ",
+  "pizzaSmokyCapoBBQDesc": "Brick oven, sweet heat.",
+  "pizzaSmokyCapoBBQFullDesc": "Our signature BBQ pizza brings together the smoky depth of slow-cooked brisket with tangy house-made BBQ sauce and caramelized onions. The perfect marriage of Southern comfort and Italian tradition creates a flavor profile that's equal parts comforting and crave-worthy.",
+  "pizzaVelvetPepperoni": "Velvet Pepperoni",
+  "pizzaVelvetPepperoniDesc": "Loaded curls, velvet cheese pull.",
+  "pizzaVelvetPepperoniFullDesc": "Our take on the classic pepperoni pizza features premium pepperoni cups that curl perfectly during baking, creating crispy edges and juicy centers. Combined with our house tomato sauce and stretchy mozzarella, this is comfort food at its finest."
 }
