updated app with required changes in menu , custom pizza , etc .

--- a/apps/mobile/lib/l10n/app_en.arb
+++ b/apps/mobile/lib/l10n/app_en.arb
@@ -15,6 +15,20 @@
   "pastOrdersDesc": "Track & re-order",
   "yourFile": "Your File",
   "yourFileDesc": "Profile & safehouses",
+  "customizePizza": "Customize Pizza",
+  "customizePizzaDesc": "Build your own pizza",
+  "selectBaseItems": "Select Base Items",
+  "selectBaseItemsDesc": "Choose up to 8 items for your pizza",
+  "selectToppings": "Select Toppings",
+  "selectDips": "Select Dips",
+  "customPizza": "Custom Pizza",
+  "customPizzaDesc": "Your personalized creation",
+  "selectedItems": "Selected Items",
+  "selectedToppings": "Selected Toppings",
+  "selectedDips": "Selected Dips",
+  "basePrice": "Base Price",
+  "toppingsPrice": "Toppings Price",
+  "dipsPrice": "Dips Price",
   "languageToggle": "Convert to Spanish?",
   "languageToggleDesc": "Toggle app language",
   "languageToggleSpanish": "Convertir a Inglés?",
@@ -162,6 +176,8 @@
   "cartItems": "Cart items",
   "viewCart": "VIEW CART",
   "aboutThisPizza": "ABOUT THIS PIZZA",
+  "aboutThisItem": "ABOUT THIS ITEM",
+  "aboutTheseWings": "ABOUT THESE WINGS",
   "ingredients": "INGREDIENTS",
   "specialToppings": "SPECIAL TOPPINGS",
   "sizeOptions": "SIZE OPTIONS",
@@ -261,5 +277,101 @@
   "pizzaSmokyCapoBBQFullDesc": "Our signature BBQ pizza brings together the smoky depth of slow-cooked brisket with tangy house-made BBQ sauce and caramelized onions. The perfect marriage of Southern comfort and Italian tradition creates a flavor profile that's equal parts comforting and crave-worthy.",
   "pizzaVelvetPepperoni": "Velvet Pepperoni",
   "pizzaVelvetPepperoniDesc": "Loaded curls, velvet cheese pull.",
-  "pizzaVelvetPepperoniFullDesc": "Our take on the classic pepperoni pizza features premium pepperoni cups that curl perfectly during baking, creating crispy edges and juicy centers. Combined with our house tomato sauce and stretchy mozzarella, this is comfort food at its finest."
+  "pizzaVelvetPepperoniFullDesc": "Our take on the classic pepperoni pizza features premium pepperoni cups that curl perfectly during baking, creating crispy edges and juicy centers. Combined with our house tomato sauce and stretchy mozzarella, this is comfort food at its finest.",
+  "pizzaHawaiianBacon": "Hawaiian Bacon",
+  "pizzaHawaiianBaconDesc": "Ham, bacon, pineapple, and green onions.",
+  "pizzaHawaiianBaconFullDesc": "A tropical paradise on a pizza! Sweet and savory collide with juicy pineapple, diced ham, crispy bacon, and fresh green onions. This island-inspired classic combines the best of both worlds - the sweetness of pineapple with the rich, smoky flavors of ham and bacon. Perfect for those who love bold, contrasting flavors.",
+  "pizzaSupreme": "Supreme",
+  "pizzaSupremeDesc": "Loaded with pepperoni, sausage, peppers, onions, and mushrooms.",
+  "pizzaSupremeFullDesc": "The ultimate pizza loaded with all your favorites. Premium pepperoni, Italian sausage, bell peppers, onions, and mushrooms come together on our house tomato sauce and mozzarella. A hearty, satisfying classic that never disappoints.",
+  "combosDeals": "Combos / Deals",
+  "combo2SlicesDrink": "Buy 2 Slices + Drink",
+  "combo2SlicesDrinkDesc": "Two slices of pizza with your choice of drink.",
+  "combo2SlicesDrinkFullDesc": "Great value combo! Get two slices of pizza from our selection and a refreshing drink to complete your meal.",
+  "comboSliceDrink": "Slice + Drink",
+  "comboSliceDrinkDesc": "One slice of pizza with a drink.",
+  "comboSliceDrinkFullDesc": "Perfect for a quick meal! One delicious slice of pizza paired with your favorite drink.",
+  "comboSliceWingsSoda": "Slice Pizza + Wings + Soda",
+  "comboSliceWingsSodaDesc": "One slice of pizza, wings, and a soda.",
+  "comboSliceWingsSodaFullDesc": "The perfect combo for the hungry! One slice of pizza, crispy wings with your choice of sauce, and a refreshing soda.",
+  "combo10WingsDrink": "10 Wings + Drink",
+  "combo10WingsDrinkDesc": "Ten wings with your choice of sauce and a drink.",
+  "combo10WingsDrinkFullDesc": "Wing lover's delight! Ten crispy wings tossed in your favorite sauce, paired with a refreshing drink.",
+  "wingsBoneless": "Wings / Boneless",
+  "wingsBuffalo": "Buffalo Wings",
+  "wingsBuffaloDesc": "Classic spicy buffalo wings.",
+  "wingsBuffaloFullDesc": "Crispy chicken wings tossed in our signature spicy buffalo sauce. Tangy, hot, and perfectly balanced - the ultimate wing experience.",
+  "wingsGarlicParmesan": "Garlic Parmesan Wings",
+  "wingsGarlicParmesanDesc": "Crispy wings with garlic parmesan sauce.",
+  "wingsGarlicParmesanFullDesc": "Perfectly crispy wings coated in a rich, savory garlic parmesan sauce. Buttery, garlicky, and cheesy - a flavor explosion in every bite.",
+  "wingsBBQ": "BBQ Wings",
+  "wingsBBQDesc": "Sweet and smoky BBQ wings.",
+  "wingsBBQFullDesc": "Tender wings glazed with our house-made BBQ sauce. Sweet, smoky, and slightly tangy - finger-licking good!",
+  "wingsMangoHabanero": "Mango Habanero Wings",
+  "wingsMangoHabaneroDesc": "Spicy wings with sweet mango habanero sauce.",
+  "wingsMangoHabaneroFullDesc": "For those who love heat! Crispy wings tossed in a fiery mango habanero sauce that brings the perfect balance of sweet tropical fruit and intense spice.",
+  "wingsLemonPepper": "Lemon Pepper Wings",
+  "wingsLemonPepperDesc": "Zesty lemon pepper seasoned wings.",
+  "wingsLemonPepperFullDesc": "Bright and zesty wings seasoned with fresh lemon and cracked black pepper. Light, refreshing, and packed with flavor.",
+  "wingsHotHoney": "Hot Honey Wings",
+  "wingsHotHoneyDesc": "Sweet and spicy hot honey glazed wings.",
+  "wingsHotHoneyFullDesc": "The perfect sweet and heat combination! Crispy wings glazed with our hot honey sauce - sweet honey meets fiery heat for an unforgettable taste.",
+  "dips": "Dips",
+  "dipHoneyMustard": "Honey Mustard",
+  "dipHoneyMustardDesc": "Sweet and tangy honey mustard dip.",
+  "dipHoneyMustardFullDesc": "A perfect blend of sweet honey and tangy mustard creating a delightful dipping sauce that complements any dish.",
+  "dipGarlic": "Garlic Dip",
+  "dipGarlicDesc": "Creamy garlic dip with herbs.",
+  "dipGarlicFullDesc": "Rich and creamy garlic dip infused with fresh herbs, perfect for fries, wings, and more.",
+  "dipParmesan": "Parmesan Dip",
+  "dipParmesanDesc": "Creamy parmesan cheese dip.",
+  "dipParmesanFullDesc": "Luxurious parmesan cheese dip with a smooth, creamy texture that elevates any side dish.",
+  "dipItalianDressing": "Italian Dressing",
+  "dipItalianDressingDesc": "Classic Italian dressing dip.",
+  "dipItalianDressingFullDesc": "Traditional Italian dressing with herbs and spices, perfect as a dip or dressing.",
+  "fries": "Fries",
+  "friesGarlic": "Garlic Fries",
+  "friesGarlicDesc": "Crispy fries tossed with garlic and herbs.",
+  "friesGarlicFullDesc": "Golden crispy fries tossed with fresh minced garlic, parsley, and a hint of parmesan. A flavorful twist on the classic side.",
+  "friesPlain": "Plain Fries",
+  "friesPlainDesc": "Classic crispy golden fries.",
+  "friesPlainFullDesc": "Perfectly seasoned golden fries, crispy on the outside and fluffy on the inside. The classic side dish that never disappoints.",
+  "salads": "Salads",
+  "saladCaesar": "Caesar Salad",
+  "saladCaesarDesc": "Classic Caesar salad with romaine lettuce.",
+  "saladCaesarFullDesc": "Crisp romaine lettuce tossed with our house-made Caesar dressing, parmesan cheese, and crunchy croutons. A timeless classic that never goes out of style.",
+  "saladGreen": "Green Salad",
+  "saladGreenDesc": "Fresh mixed greens with your choice of dressing.",
+  "saladGreenFullDesc": "A refreshing mix of fresh greens, vegetables, and your choice of house dressing. Light, healthy, and delicious.",
+  "small": "Small",
+  "large": "Large",
+  "pasta": "Pasta",
+  "pastaChickenAlfredo": "Chicken Alfredo",
+  "pastaChickenAlfredoDesc": "Creamy alfredo pasta with tender chicken.",
+  "pastaChickenAlfredoFullDesc": "Tender grilled chicken breast served over fettuccine pasta in a rich, creamy alfredo sauce. Garnished with parmesan cheese and fresh parsley for a comforting, indulgent meal.",
+  "desserts": "Desserts",
+  "dessertChocolateChipCookiePizza": "Chocolate Chip Cookie Pizza",
+  "dessertChocolateChipCookiePizzaDesc": "Decadent chocolate chip cookie baked pizza-style.",
+  "dessertChocolateChipCookiePizzaFullDesc": "A giant warm chocolate chip cookie baked to perfection and served pizza-style. Gooey, chocolatey, and absolutely irresistible. Perfect for sharing or enjoying solo.",
+  "dessertChocolateChurros": "Chocolate Churros",
+  "dessertChocolateChurrosDesc": "Crispy churros with chocolate dipping sauce.",
+  "dessertChocolateChurrosFullDesc": "Golden, crispy churros dusted with cinnamon sugar, served with a rich chocolate dipping sauce. A sweet treat that satisfies every craving.",
+  "dessertCheesecake": "Cheesecake",
+  "dessertCheesecakeDesc": "Classic creamy New York-style cheesecake.",
+  "dessertCheesecakeFullDesc": "Rich and creamy New York-style cheesecake with a buttery graham cracker crust. Smooth, decadent, and the perfect ending to any meal.",
+  "drinks": "Drinks",
+  "drink2Liter": "2 Liter",
+  "drink2LiterDesc": "2 liter bottle of soft drink.",
+  "drink2LiterFullDesc": "A large 2 liter bottle of your favorite soft drink, perfect for sharing with family and friends.",
+  "drink16oz": "16oz Drink",
+  "drink16ozDesc": "16 ounce soft drink.",
+  "drink16ozFullDesc": "A refreshing 16 ounce soft drink to quench your thirst and complement your meal perfectly.",
+  "selectPizzaSlice": "Select Pizza Slice",
+  "chooseFromOptions": "Choose from the options below",
+  "pizza10Inch": "10\" Pizza",
+  "pizza18Inch": "18\" Pizza",
+  "slice": "Slice",
+  "extraToppings": "Extra Toppings",
+  "perTopping": "per topping",
+  "twoToppingsIncluded": "2 toppings included"
 }
