--- a/apps/mobile/lib/l10n/app_es.arb
+++ b/apps/mobile/lib/l10n/app_es.arb
@@ -15,6 +15,20 @@
   "pastOrdersDesc": "Rastrea y reordena",
   "yourFile": "Tu Archivo",
   "yourFileDesc": "Perfil y casas seguras",
+  "customizePizza": "Personalizar Pizza",
+  "customizePizzaDesc": "Crea tu propia pizza",
+  "selectBaseItems": "Seleccionar Ingredientes Base",
+  "selectBaseItemsDesc": "Elige hasta 8 ingredientes para tu pizza",
+  "selectToppings": "Seleccionar Ingredientes",
+  "selectDips": "Seleccionar Salsas",
+  "customPizza": "Pizza Personalizada",
+  "customPizzaDesc": "Tu creación personalizada",
+  "selectedItems": "Ingredientes Seleccionados",
+  "selectedToppings": "Ingredientes Seleccionados",
+  "selectedDips": "Salsas Seleccionadas",
+  "basePrice": "Precio Base",
+  "toppingsPrice": "Precio de Ingredientes",
+  "dipsPrice": "Precio de Salsas",
   "languageToggle": "Convertir a Español?",
   "languageToggleDesc": "Cambiar idioma de la app",
   "languageToggleSpanish": "Convertir a Inglés?",
@@ -162,6 +176,8 @@
   "cartItems": "Artículos en el carrito",
   "viewCart": "VER CARRITO",
   "aboutThisPizza": "ACERCA DE ESTA PIZZA",
+  "aboutThisItem": "ACERCA DE ESTE ARTÍCULO",
+  "aboutTheseWings": "ACERCA DE ESTAS ALITAS",
   "ingredients": "INGREDIENTES",
   "specialToppings": "INGREDIENTES ESPECIALES",
   "sizeOptions": "OPCIONES DE TAMAÑO",
@@ -261,5 +277,8 @@
   "pizzaSmokyCapoBBQFullDesc": "Nuestra pizza BBQ especial une la profundidad ahumada de la pechuga cocida lentamente con salsa BBQ casera ácida y cebollas caramelizadas. El matrimonio perfecto de comodidad sureña y tradición italiana crea un perfil de sabor que es igualmente reconfortante y adictivo.",
   "pizzaVelvetPepperoni": "Pepperoni Aterciopelado",
   "pizzaVelvetPepperoniDesc": "Rizos cargados, estiramiento de queso aterciopelado.",
-  "pizzaVelvetPepperoniFullDesc": "Nuestra versión de la pizza clásica de pepperoni presenta tazas de pepperoni premium que se enrollan perfectamente durante la cocción, creando bordes crujientes y centros jugosos. Combinado con nuestra salsa de tomate casera y mozzarella elástica, esta es comida reconfortante en su máxima expresión."
+  "pizzaVelvetPepperoniFullDesc": "Nuestra versión de la pizza clásica de pepperoni presenta tazas de pepperoni premium que se enrollan perfectamente durante la cocción, creando bordes crujientes y centros jugosos. Combinado con nuestra salsa de tomate casera y mozzarella elástica, esta es comida reconfortante en su máxima expresión.",
+  "pizzaHawaiianBacon": "Hawaiana con Tocino",
+  "pizzaHawaiianBaconDesc": "Jamón, tocino, piña y cebollas verdes.",
+  "pizzaHawaiianBaconFullDesc": "¡Un paraíso tropical en una pizza! Lo dulce y lo salado se combinan con jugosa piña, jamón en cubos, tocino crujiente y cebollas verdes frescas. Este clásico inspirado en las islas combina lo mejor de ambos mundos: la dulzura de la piña con los sabores ricos y ahumados del jamón y el tocino. Perfecto para quienes aman los sabores audaces y contrastantes."
 }
