changes in menu items and some fixes

--- a/apps/mobile/lib/l10n/app_en.arb
+++ b/apps/mobile/lib/l10n/app_en.arb
@@ -33,7 +33,6 @@
   "languageToggleDesc": "Toggle app language",
   "languageToggleSpanish": "Convertir a Inglés?",
   "ordersClosed": "Orders Closed",
-  "familyPoints": "Family Points",
   "safehouses": "Safehouses",
   "familyBulletin": "Family Bulletin",
   "bossPick": "Boss Pick",
@@ -156,6 +155,7 @@
   "browseMenu": "BROWSE MENU",
   "size": "Size:",
   "toppings": "Toppings:",
+  "selectedSlices": "Selected slices:",
   "remove": "Remove",
   "item": "item",
   "items": "items",
@@ -284,6 +284,18 @@
   "pizzaSupreme": "Supreme",
   "pizzaSupremeDesc": "Loaded with pepperoni, sausage, peppers, onions, and mushrooms.",
   "pizzaSupremeFullDesc": "The ultimate pizza loaded with all your favorites. Premium pepperoni, Italian sausage, bell peppers, onions, and mushrooms come together on our house tomato sauce and mozzarella. A hearty, satisfying classic that never disappoints.",
+  "pizzaMeatLover": "Meat Lover",
+  "pizzaMeatLoverDesc": "Pepperoni, sausage, bacon, and ham.",
+  "pizzaMeatLoverFullDesc": "A carnivore's dream come true! This hearty pizza is loaded with premium pepperoni, Italian sausage, crispy bacon, and savory ham. Every bite delivers a protein-packed punch of flavor. Perfect for those who believe more meat is always better.",
+  "pizzaMexicali": "Mexicali",
+  "pizzaMexicaliDesc": "Spicy Mexican-inspired toppings with jalapeños.",
+  "pizzaMexicaliFullDesc": "A fiesta of flavors on a pizza! Our Mexicali pizza brings together the bold spices of Mexico with classic Italian pizza. Featuring spicy ground beef, jalapeños, bell peppers, onions, and our signature Mexican cheese blend. A fusion that's as exciting as it is delicious.",
+  "pizzaChickenTikkaMasala": "Chicken Tikka Masala",
+  "pizzaChickenTikkaMasalaDesc": "Indian-inspired with tikka masala chicken.",
+  "pizzaChickenTikkaMasalaFullDesc": "Experience the rich, aromatic flavors of India on a perfectly baked pizza crust. Tender marinated chicken tikka, creamy masala sauce, red onions, and fresh cilantro create an unforgettable fusion. This bold creation brings the warmth of Indian spices to Italian tradition.",
+  "pizzaAlfredoChicken": "Alfredo Chicken",
+  "pizzaAlfredoChickenDesc": "Creamy alfredo sauce with grilled chicken.",
+  "pizzaAlfredoChickenFullDesc": "Indulge in creamy perfection with our Alfredo Chicken pizza. Tender grilled chicken breast, rich alfredo sauce, and mozzarella cheese come together on a golden crust. A white pizza that's as comforting as it is elegant. Pure creamy satisfaction in every bite.",
   "combosDeals": "Combos / Deals",
   "combo2SlicesDrink": "Buy 2 Slices + Drink",
   "combo2SlicesDrinkDesc": "Two slices of pizza with your choice of drink.",
@@ -329,6 +341,12 @@
   "dipItalianDressing": "Italian Dressing",
   "dipItalianDressingDesc": "Classic Italian dressing dip.",
   "dipItalianDressingFullDesc": "Traditional Italian dressing with herbs and spices, perfect as a dip or dressing.",
+  "dipRanch": "Ranch",
+  "dipRanchDesc": "Creamy ranch dip with herbs.",
+  "dipRanchFullDesc": "Classic creamy ranch dip with a perfect blend of herbs and spices. Cool, tangy, and refreshing - the ultimate dipping sauce for wings, fries, and more.",
+  "dipBlueCheese": "Blue Cheese",
+  "dipBlueCheeseDesc": "Rich and tangy blue cheese dip.",
+  "dipBlueCheeseFullDesc": "Bold and tangy blue cheese dip with chunks of real blue cheese. Rich, creamy, and full of flavor - a sophisticated choice for wings and vegetables.",
   "fries": "Fries",
   "friesGarlic": "Garlic Fries",
   "friesGarlicDesc": "Crispy fries tossed with garlic and herbs.",
@@ -359,6 +377,9 @@
   "dessertCheesecake": "Cheesecake",
   "dessertCheesecakeDesc": "Classic creamy New York-style cheesecake.",
   "dessertCheesecakeFullDesc": "Rich and creamy New York-style cheesecake with a buttery graham cracker crust. Smooth, decadent, and the perfect ending to any meal.",
+  "dessertFreshCannoli": "Fresh Cannoli",
+  "dessertFreshCannoliDesc": "Crispy shell filled with sweet ricotta cream.",
+  "dessertFreshCannoliFullDesc": "Authentic Italian cannoli with a crispy, golden shell filled with sweet, creamy ricotta cheese. Topped with chocolate chips and dusted with powdered sugar. A traditional Sicilian treat that's both elegant and indulgent.",
   "drinks": "Drinks",
   "drink2Liter": "2 Liter",
   "drink2LiterDesc": "2 liter bottle of soft drink.",
