--- a/apps/mobile/lib/l10n/app_es.arb
+++ b/apps/mobile/lib/l10n/app_es.arb
@@ -33,7 +33,6 @@
   "languageToggleDesc": "Cambiar idioma de la app",
   "languageToggleSpanish": "Convertir a Inglés?",
   "ordersClosed": "Pedidos Cerrados",
-  "familyPoints": "Puntos Familiares",
   "safehouses": "Casas Seguras",
   "familyBulletin": "Boletín Familiar",
   "bossPick": "Elección del Jefe",
@@ -156,6 +155,7 @@
   "browseMenu": "VER MENÚ",
   "size": "Tamaño:",
   "toppings": "Ingredientes:",
+  "selectedSlices": "Rebanadas seleccionadas:",
   "remove": "Eliminar",
   "item": "artículo",
   "items": "artículos",
