--- a/apps/mobile/lib/l10n/app_es.arb
+++ b/apps/mobile/lib/l10n/app_es.arb
@@ -280,5 +280,26 @@
   "pizzaVelvetPepperoniFullDesc": "Nuestra versión de la pizza clásica de pepperoni presenta tazas de pepperoni premium que se enrollan perfectamente durante la cocción, creando bordes crujientes y centros jugosos. Combinado con nuestra salsa de tomate casera y mozzarella elástica, esta es comida reconfortante en su máxima expresión.",
   "pizzaHawaiianBacon": "Hawaiana con Tocino",
   "pizzaHawaiianBaconDesc": "Jamón, tocino, piña y cebollas verdes.",
-  "pizzaHawaiianBaconFullDesc": "¡Un paraíso tropical en una pizza! Lo dulce y lo salado se combinan con jugosa piña, jamón en cubos, tocino crujiente y cebollas verdes frescas. Este clásico inspirado en las islas combina lo mejor de ambos mundos: la dulzura de la piña con los sabores ricos y ahumados del jamón y el tocino. Perfecto para quienes aman los sabores audaces y contrastantes."
+  "pizzaHawaiianBaconFullDesc": "¡Un paraíso tropical en una pizza! Lo dulce y lo salado se combinan con jugosa piña, jamón en cubos, tocino crujiente y cebollas verdes frescas. Este clásico inspirado en las islas combina lo mejor de ambos mundos: la dulzura de la piña con los sabores ricos y ahumados del jamón y el tocino. Perfecto para quienes aman los sabores audaces y contrastantes.",
+  "pizzaMeatLover": "Amante de la Carne",
+  "pizzaMeatLoverDesc": "Pepperoni, salchicha, tocino y jamón.",
+  "pizzaMeatLoverFullDesc": "¡El sueño de un carnívoro hecho realidad! Esta pizza abundante está cargada con pepperoni premium, salchicha italiana, tocino crujiente y jamón sabroso. Cada bocado ofrece un golpe de sabor lleno de proteínas. Perfecto para quienes creen que más carne siempre es mejor.",
+  "pizzaMexicali": "Mexicali",
+  "pizzaMexicaliDesc": "Ingredientes picantes inspirados en México con jalapeños.",
+  "pizzaMexicaliFullDesc": "¡Una fiesta de sabores en una pizza! Nuestra pizza Mexicali combina las especias audaces de México con la pizza italiana clásica. Con carne molida picante, jalapeños, pimientos, cebollas y nuestra mezcla de queso mexicano. Una fusión tan emocionante como deliciosa.",
+  "pizzaChickenTikkaMasala": "Pollo Tikka Masala",
+  "pizzaChickenTikkaMasalaDesc": "Inspirado en la India con pollo tikka masala.",
+  "pizzaChickenTikkaMasalaFullDesc": "Experimenta los sabores ricos y aromáticos de la India en una corteza de pizza perfectamente horneada. Pollo tikka marinado tierno, salsa masala cremosa, cebollas rojas y cilantro fresco crean una fusión inolvidable. Esta creación audaz trae el calor de las especias indias a la tradición italiana.",
+  "pizzaAlfredoChicken": "Pollo Alfredo",
+  "pizzaAlfredoChickenDesc": "Salsa alfredo cremosa con pollo a la parrilla.",
+  "pizzaAlfredoChickenFullDesc": "Déjate llevar por la perfección cremosa con nuestra pizza de Pollo Alfredo. Pechuga de pollo a la parrilla tierna, rica salsa alfredo y queso mozzarella se unen en una corteza dorada. Una pizza blanca tan reconfortante como elegante. Pura satisfacción cremosa en cada bocado.",
+  "dipRanch": "Ranch",
+  "dipRanchDesc": "Salsa ranch cremosa con hierbas.",
+  "dipRanchFullDesc": "Salsa ranch cremosa clásica con una mezcla perfecta de hierbas y especias. Fresca, ácida y refrescante: la salsa para mojar definitiva para alitas, papas fritas y más.",
+  "dipBlueCheese": "Queso Azul",
+  "dipBlueCheeseDesc": "Salsa de queso azul rica y ácida.",
+  "dipBlueCheeseFullDesc": "Salsa de queso azul audaz y ácida con trozos de queso azul real. Rica, cremosa y llena de sabor: una elección sofisticada para alitas y verduras.",
+  "dessertFreshCannoli": "Cannoli Fresco",
+  "dessertFreshCannoliDesc": "Cáscara crujiente rellena con crema de ricotta dulce.",
+  "dessertFreshCannoliFullDesc": "Cannoli italiano auténtico con una cáscara dorada y crujiente rellena de queso ricotta dulce y cremoso. Cubierto con chips de chocolate y espolvoreado con azúcar en polvo. Un manjar tradicional siciliano que es elegante e indulgente."
 }
